<resources>
    <string name="app_name">INSUGAR</string>
    <string name="menu_name">INSUGAR</string>
    <string name="calculator_name">คำนวณอินซูลิน</string>
    <string name="history_name">ประวัติการใช้งาน</string>
    <string name="knowledge_name">สาระน่ารู้</string>
    <string name="knowledgetopic1_name">ความรู้ทั่วไปเรื่องโรคเบาหวาน</string>
    <string name="knowledgetopic2_name">อาหารกับผู้เป็นเบาหวาน</string>
    <string name="knowledgetopic3_name">เบาหวานขึ้นตา</string>
    <string name="knowledgetopic4_name">โรคไตจากเบาหวาน</string>
    <string name="knowledgetopic5_name">การดูแลสุขภาพเท้าของผู้ป่วยเบาหวาน</string>
    <string name="knowledgetopic6_name">วิธีการใช้ยาอินซูลินแบบปากกา</string>
    <string name="knowledgetopic7_name">ข้อควรระวังต่างๆ ในผู้ป่วยเบาหวานที่ใช้ยาฉีดอินซูลิน</string>
    <string name="settings_name">ตั้งค่า</string>
    <string name="account_name">บัญชีผู้ใช้งาน</string>
    <string name="his_long_name">ประวัติการฉีด Long Insulin</string>
    <string name="his_cal_name">ประวัติการคำนวณ</string>
    <string name="sumlistfood_name">รายการอาหาร</string>
    <string name="listfood_name">ค้นหาอาหาร</string>
    <string name="sumlistactivity_name">รายการกิจกรรม</string>
    <string name="listactivity_name">ค้นหากิจกรรม</string>

    <string name="dialog_title">บันทึกการฉีด Long Insulin</string>

    <string name="open_drawer">Open Menu</string>
    <string name="close_drawer">Close Menu</string>

    <!-- Math Alarm Activity -->
    <string name="alarm_name">นาฬิกาแจ้งเตือน</string>
    <string name="title_activity_set_alarms">ตั้งค่าการแจ้งเตือน</string>
    <string name="no_alarms">ไม่มีเวลาแจ้งเตือนที่ตั้งค่าไว้</string>
    <string name="button_new">เพิ่ม</string>
    <!-- Menu Alarm -->
    <string name="menu_item_new">เพิ่ม</string>
    <string name="menu_item_save">บันทึก</string>
    <string name="menu_item_delete">ลบ</string>
    <!-- Alert -->
    <string name="button_delete">ลบ</string>
    <string name="ok">ตกลง</string>
    <string name="cancel">ยกเลิก</string>
</resources>
